# parser_telegram

./: pyproject.toml
parser_telegram_history/: main.py
