[tool.poetry]
name = "parser_telegram_history"
version = "0.1.0"
description = ""
authors = ["azat715 <azat715@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.3.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
isort = "^5.6.4"
pylint = "^2.6.0"

[tool.poetry.scripts]
parser_telegram_history = "parser_telegram_history.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
